hphp/hack/test/typecheck/new_inference/eager_solve/shapes_key_exists.php.like_types.exp
File "shapes_key_exists.php", line 10, characters 28-29:
Invalid argument (Typing[4110])
File "shapes_key_exists.php", line 4, characters 11-11:
Some type constraint(s) are violated here
File "shapes_key_exists.php", line 4, characters 11-11:
T is a constrained type parameter
File "shapes_key_exists.php", line 10, characters 28-29:
Expected shape(?'x' => [unresolved], ...) because Shapes::idx expects a shape
File "shapes_key_exists.php", line 4, characters 11-11:
But got dynamic
File "shapes_key_exists.php", line 10, characters 10-49:
Invalid return type (Typing[4110])
File "shapes_key_exists.php", line 8, characters 44-46:
Expected int
File "shapes_key_exists.php", line 8, characters 29-31:
But got dynamic because it is an unenforceable type
